[project]
name = "mefa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ruff>=0.13.0",
     "streamlit",
    "psycopg2-binary==2.9.9",
    "sqlalchemy",
    "sqlalchemy-utils",
    "sqlalchemy_utils",
    "streamlit_sql==0.2.4",
    "Faker",
    "langchain",
    "langchain_community",
    "langchain-openai",
    "uvicorn",
    "dspy-ai",
    "beautifulsoup4",
    "lxml==5.2.2",
    "guardrails-ai",
]
