[project]
name = "mefa_dashboard"
version = "1.0.0"
dependencies = [
    "streamlit",
    "psycopg2-binary==2.9.9",
    "sqlalchemy",
    "sqlalchemy-utils",
    "streamlit_sql==0.2.4",
    "Faker",
    "langchain",
    "langchain_community",
    "langchain-openai",
    "uvicorn",
    "dspy-ai",
    "beautifulsoup4",
    "lxml==5.2.2",
    "guardrails-ai",

]

[dependency-groups]
dev = ["pytest", "watchdog"]

[tool.uv.workspace]
members = [
    "app",
 "mefa",
]
